--- a/src/components/HoneyPopup/QuantitySelector/QuantitySelector.module.css
+++ b/src/components/HoneyPopup/QuantitySelector/QuantitySelector.module.css
@@ -10,7 +10,7 @@
 .quantity {
   margin-right: 12px;
   font-family: var(--primary-font-family);
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   letter-spacing: 4%;
   font-weight: 600;
