--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@
   --animation-duration: 0.3s;
 }
 
+.os-theme-dark {
+    --os-handle-bg: #facf5a ; 
+    --os-handle-bg-hover: #facf5a ;
+    --os-handle-bg-active: #facf5a ;
+    --os-size: 10px;
+    --os-track-bg: #f7f5ed ;
+    --os-track-border-radius: 6px;
+    --os-handle-border-radius: 6px;
+}
+
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
